# MagnusEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/camera/: camera.h
include/glad/: glad.h
src/: camera.c  glad.c  main.c  main.cpp
